# emply-assignment

./: .gitignore  README.md  main.py  pyproject.toml
output/: Bid2_rag_extraction.json  combined_rag_extraction.json
