[project]
name = "emply-assignment"
version = "0.1.0"
description = "Assignment for Emply by Shivansh Karan"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docling>=2.58.0",
    "google-generativeai>=0.8.5",
    "chromadb>=0.5.0",
    "sentence-transformers>=2.2.0",
    "transformers>=4.30.0",
    "pydantic>=2.12.3",
    "python-dotenv>=1.1.1",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.0.10",
    "langchain-community>=0.3.31",
]
